hidde spring.datasource.url in application.properties to add in my personal repository.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:sqlserver://54.166.89.200\\SQLEXPRESS:49170;encrypt=true;trustServerCertificate=true;databaseName=spring
+spring.datasource.url=seurepositorioaqui
 spring.datasource.username=schedulling
 spring.datasource.password=SCHEDULLING@2023
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
